Added menu and hyperlinks

--- a/index.html
+++ b/index.html
@@ -1,7 +1,34 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <p>Hello World!</p>
+    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>Toby Dixon</title>
+    <h2>Toby Dixon</h2>
 </head>
 <body>
+<table>
+    <th>
+        <ul>
+            <li><h1>
+                <a href = "./projects.html">Project Ideas</a>
+            </h1></li>
+        </ul>
+    </th>
+    <th>
+        <ul>
+            <li><h1>
+                <a href = "./projects.html">Work in process</a>
+            </h1></li>
+        </ul>
+    </th>
+    <th>
+        <ul>
+            <li><h1>
+                <a href = "./projects.html">Finished projects</a>
+            </h1></li>
+        </ul>
+    </th>
+</table>
 </body>
 </html>
