added preview point

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <title>Toby Dixon</title>
-    <h2>Toby Dixon</h2>
+    <a href = "https://github.com/tobyd02">
+        <h2>Toby Dixon</h2>
+    </a>
 </head>
 <body>
 <table>
@@ -30,5 +32,6 @@
         </ul>
     </th>
 </table>
+<div class = "preview">[This is where the preview is]</div>
 </body>
 </html>
