--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         </table>
     </div>
     <div id = "finished" class = "container">
-        Finsihed
+        <table>
+            <th>
+                <a href = "https://github.com/TobyD02/TODO">TODO App</a>
+            </th>
+        </table>
     </div>
 
     <script src = "javascript.js"></script>
