Added github repos to lists

--- a/index.html
+++ b/index.html
@@ -34,20 +34,25 @@
     </table>
 
     <div id = "ideas" class = "container">
-        Ideas
+        <li>
+            Ideas
+        </li>
     </div>
     <div id = "wip" class = "container">
         <table>
-            <th>
-            <a href = "https://github.com/TobyD02/javascript-physics-engine">Physics Engine</a>
-            </th>
+            <li> <a href = "https://github.com/TobyD02/javascript-physics-engine">Physics Engine</a> </li>
+            <li> <a href = "https://github.com/TobyD02/EmailBot">Python Emailer</a></li>
+            <li> <a href = "https://github.com/TobyD02/DynamicLights"></a>Dynamic Lights</li>
+            <li> <a href = "https://github.com/TobyD02/Discord-Plays-Pokemon"></a>Discord Plays Pokemon</li> 
         </table>
     </div>
     <div id = "finished" class = "container">
         <table>
-            <th>
-                <a href = "https://github.com/TobyD02/TODO">TODO App</a>
-            </th>
+            <li><a href = "https://github.com/TobyD02/TODO">TODO App</a></li>
+            <li><a href = "https://github.com/TobyD02/beQuietBot">Discord "Be Quiet" Bot</a></li>
+            <li><a href = "https://github.com/TobyD02/PongInJS">Pong</a></li>
+            <li><a href = "https://github.com/TobyD02/FireParticles">Fire Particle System</a></li>
+            <li><a href = "https://github.com/TobyD02/ClockJS">Clock</a></li>
         </table>
     </div>
 
