Fixed hyperlinks and added A* Pathfinding repo

--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
         <table>
             <li> <a href = "https://github.com/TobyD02/javascript-physics-engine">Physics Engine</a> </li>
             <li> <a href = "https://github.com/TobyD02/EmailBot">Python Emailer</a></li>
-            <li> <a href = "https://github.com/TobyD02/DynamicLights"></a>Dynamic Lights</li>
-            <li> <a href = "https://github.com/TobyD02/Discord-Plays-Pokemon"></a>Discord Plays Pokemon</li> 
+            <li> <a href = "https://github.com/TobyD02/DynamicLights">Dynamic Lights</a></li>
+            <li> <a href = "https://github.com/TobyD02/Discord-Plays-Pokemon">Discord Plays Pokemon</a></li> 
+            <li> <a href = "https://github.com/TobyD02/A-Star-Pathfinding">A* Pathfinding</a></li> 
         </table>
     </div>
     <div id = "finished" class = "container">
