--- a/index.html
+++ b/index.html
@@ -40,20 +40,49 @@
     </div>
     <div id = "wip" class = "container">
         <table>
-            <li> <a href = "https://github.com/TobyD02/javascript-physics-engine">Physics Engine</a> </li>
-            <li> <a href = "https://github.com/TobyD02/EmailBot">Python Emailer</a></li>
-            <li> <a href = "https://github.com/TobyD02/DynamicLights">Dynamic Lights</a></li>
-            <li> <a href = "https://github.com/TobyD02/Discord-Plays-Pokemon">Discord Plays Pokemon</a></li> 
-            <li> <a href = "https://github.com/TobyD02/A-Star-Pathfinding">A* Pathfinding</a></li> 
+            <tr>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/javascript-physics-engine'"> 
+                    <a>Physics Engine</a> 
+                </td>
+                <td background = "images/python.png" onclick="window.location.href = 'https://github.com/TobyD02/EmailBot'">
+                    <a>Python Emailer</a>
+                </td>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/DynamicLights'"> 
+                    <a>Dynamic Lights</a>
+                </td>
+            </tr>
+            <tr>
+                <td background = "images/python.png" onclick="window.location.href = 'https://github.com/TobyD02/Discord-Plays-Pokemon'"> 
+                    <a>Discord Plays Pokemon</a>
+                </td> 
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/A-Star-Pathfinding'">
+                    <a href = "">A* Pathfinding</a>
+                </td> 
+            </tr>
+            
         </table>
     </div>
     <div id = "finished" class = "container">
         <table>
-            <li><a href = "https://github.com/TobyD02/TODO">TODO App</a></li>
-            <li><a href = "https://github.com/TobyD02/beQuietBot">Discord "Be Quiet" Bot</a></li>
-            <li><a href = "https://github.com/TobyD02/PongInJS">Pong</a></li>
-            <li><a href = "https://github.com/TobyD02/FireParticles">Fire Particle System</a></li>
-            <li><a href = "https://github.com/TobyD02/ClockJS">Clock</a></li>
+            <tr>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/TODO'">
+                    <a>TODO App</a>
+                </td>
+                <td background = "images/python.png" onclick="window.location.href = 'https://github.com/TobyD02/beQuietBot'">
+                    <a>Discord "Be Quiet" Bot</a>
+                </td>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/PongInJS'">
+                    <a>Pong</a>
+                </td>
+            </tr>
+            <tr>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/FireParticles'">
+                    <a>Fire Particle System</a>
+                </td>
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/ClockJS'">
+                    <a>Clock</a>
+                </td>
+            </tr>
         </table>
     </div>
 
