Changed idea tab to be the same as others, will be customised soon

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     </table>
 
     <div id = "ideas" class = "container">
-        <li>
-            Ideas
-        </li>
+        <table>
+            <tr>
+                <td><a>Ideas</a></td>
+            </tr>
+        </table>
     </div>
     <div id = "wip" class = "container">
         <table>
