Changed hyperlink for TODO to webpage rather than repo

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div id = "finished" class = "container">
         <table>
             <tr>
-                <td background = "images/javascript.png" onclick="window.location.href = 'https://github.com/TobyD02/TODO'">
+                <td background = "images/javascript.png" onclick="window.location.href = 'https://tobyd02.github.io/TODO'">
                     <a>TODO App</a>
                 </td>
                 <td background = "images/python.png" onclick="window.location.href = 'https://github.com/TobyD02/beQuietBot'">
